<resources>
    <string name="app_name">Sample App</string>
    <string name="signIn">Sign in</string>
    <string name="createAccount">Create Account</string>
    <string name="signInPass">Password</string>
    <string name="signInEmail">Email</string>
    <string name="create_name">Name</string>
    <string name="dobText">Date of Birth:</string>
    <string name="create_dobMonth">MM</string>
    <string name="create_dobDay">DD</string>
    <string name="create_dobYear">YYYY</string>
    <string name="create_confirmPass">Confirm Password</string>
    <string name="create_doctorName">Name of Doctor</string>
    <string name="create_doctorNumber">Doctor\'s Phone Number</string>
    <string name="create_doctorEmail">Doctor\'s Email</string>
    <string name="create_doctorAddress">Doctor\'s Address:</string>
    <string name="createDoctorButton">Add Doctor</string>
    <string name="doctorNumberLabel">Phone Number:</string>
    <string name="doctorEmailLabel">Email:</string>
    <string name="routeLabel">Directions to this doctor:</string>
</resources>
