<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <EditText
        android:id="@+id/create_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/signInEmail"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/create_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/create_name"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/create_email"
        app:layout_constraintLeft_toLeftOf="@id/create_email"
        app:layout_constraintRight_toRightOf="@id/create_email"
        />

    <EditText
        android:id="@+id/create_dob"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/create_dob"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@id/create_name"
        app:layout_constraintLeft_toLeftOf="@id/create_name"
        app:layout_constraintRight_toRightOf="@id/create_name"
        />

    <EditText
        android:id="@+id/create_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/signInPass"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/create_dob"
        app:layout_constraintLeft_toLeftOf="@id/create_dob"
        app:layout_constraintRight_toRightOf="@id/create_dob"
        />

    <EditText
        android:id="@+id/create_confirmPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/create_confirmPass"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/create_pass"
        app:layout_constraintLeft_toLeftOf="@id/create_pass"
        app:layout_constraintRight_toRightOf="@id/create_pass"
        />

    <Button
        android:id="@+id/create_confirmButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/createAccount"
        android:onClick="createAccount"
        app:layout_constraintTop_toBottomOf="@id/create_confirmPass"
        app:layout_constraintLeft_toLeftOf="@id/create_confirmPass"
        app:layout_constraintRight_toRightOf="@id/create_confirmPass"
        />

</androidx.constraintlayout.widget.ConstraintLayout>